[package]
name = "optical-flow-lk"
version = "0.3.0"
edition = "2024"
authors = ["den59k <den59k@gmail.com>"]
description = "Rust implementation of Lucas-Kanade optical flow and Shi-Tomasi feature detection"
license = "MIT"
repository = "https://github.com/den59k/lucas-shi-rust"
documentation = "https://docs.rs/optical-flow-lk"
keywords = ["optical-flow", "tracking", "computer-vision", "feature-detection", "visual-odometry"]
categories = ["computer-vision", "algorithms", "science"]

# Release builds (including the wasm32 artifact) get full optimization. `lto`
# and a single codegen unit matter especially for WASM, where they let the
# inliner collapse the SIMD/interpolation hot paths.
[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[dependencies]
image = "0.25.10"
nalgebra = "0.34.1"

[dev-dependencies]
imageproc = "0.26.1"
criterion = "0.5"

[[bench]]
name = "gradients"
harness = false

[[bench]]
name = "lk"
harness = false

[[bench]]
name = "tracking"
harness = false
